3_ano/C/aula02/E3/Calculator.g4
grammar Calculator;

program:
        stat* EOF
    ;

stat:
        expr? NEWLINE
    ;

expr:
        expr op=('*'|'/'|'%') expr  # ExprMultDivMod
    |   expr op=('+'|'-') expr      # ExprAddSub
    |   Integer                     # ExprInteger
    |   '(' expr ')'                # ExprParent
    |   op=('+'|'-') expr		    # ExprUnary
    ;

Integer: [0-9]+;
NEWLINE: '\r'? '\n';
WS: [ \t]+ -> skip;
COMMENT: '#' .*? '\n' -> skip;
